v055 - Fix photo issues on lists
